--- a/pay.html
+++ b/pay.html
@@ -69,24 +69,24 @@
 	<div class="weui-tabbar">
 		<a id="fill-out" href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
 			<span style="display: inline-block;position: relative;">
-				<img src="./images/icon_1.png" alt="" class="weui-tabbar__icon" width="35" height="35">
+				<img src="images/icon_1-d22a8962.png" alt="" class="weui-tabbar__icon" width="35" height="35">
 				<span class="weui-badge" style="position: absolute;top: -2px;right: -13px;">0</span>
 			</span>
 			<p class="weui-tabbar__label">志愿填报</p>
 		</a>
 		<a href="javascript:;" class="weui-tabbar__item">
-			<img src="./images/icon_2.png" alt="" class="weui-tabbar__icon" width="35" height="35" style="margin-bottom: 7px;">
+			<img src="images/icon_2-e032d6b4.png" alt="" class="weui-tabbar__icon" width="35" height="35" style="margin-bottom: 7px;">
 			<p class="weui-tabbar__label">填报查询</p>
 		</a>
 		<a id="online-pay" href="javascript:;" class="weui-tabbar__item">
 			<span style="display: inline-block;position: relative;">
-				<img src="./images/icon_3.png" alt="" class="weui-tabbar__icon" width="35" height="35">
+				<img src="images/icon_3-ca102e06.png" alt="" class="weui-tabbar__icon" width="35" height="35">
 				<span class="weui-badge weui-badge_dot" style="position: absolute;top: 0;right: -6px;"></span>
 			</span>
 			<p class="weui-tabbar__label">在线支付</p>
 		</a>
 		<a href="javascript:;" class="weui-tabbar__item">
-			<img src="./images/icon_4.png" alt="" class="weui-tabbar__icon" width="35" height="35" style="margin-bottom: 7px;">
+			<img src="images/icon_4-9df6b0aa.png" alt="" class="weui-tabbar__icon" width="35" height="35" style="margin-bottom: 7px;">
 			<p class="weui-tabbar__label">我</p>
 		</a>
 	</div>
