--- a/pay.html
+++ b/pay.html
@@ -10,7 +10,9 @@
 
 
 	
-		<link href="style/commons.9ccd3b49.css" rel="stylesheet">
+		<link href="style/vendor.89aefa79.css" rel="stylesheet">
+		
+		<link href="style/commons.df3eef44.css" rel="stylesheet">
 		
 </head>
 
@@ -18,9 +20,11 @@
 	
 		<script type="text/javascript" src="js/manifest-f772a7.bundle.js"></script>
 	
-		<script type="text/javascript" src="js/commons-9ccd3b.bundle.js"></script>
+		<script type="text/javascript" src="js/vendor-89aefa.bundle.js"></script>
 	
-		<script type="text/javascript" src="js/pay-2b9923.bundle.js"></script>
+		<script type="text/javascript" src="js/commons-df3eef.bundle.js"></script>
+	
+		<script type="text/javascript" src="js/pay-a0bee2.bundle.js"></script>
 	
 
 	<div class="container">
