--- a/pay.html
+++ b/pay.html
@@ -12,7 +12,7 @@
 	
 		<link href="style/vendor.89aefa79.css" rel="stylesheet">
 		
-		<link href="style/commons.df3eef44.css" rel="stylesheet">
+		<link href="style/commons.ba537ed6.css" rel="stylesheet">
 		
 </head>
 
@@ -22,7 +22,7 @@
 	
 		<script type="text/javascript" src="js/vendor-89aefa.bundle.js"></script>
 	
-		<script type="text/javascript" src="js/commons-df3eef.bundle.js"></script>
+		<script type="text/javascript" src="js/commons-ba537e.bundle.js"></script>
 	
 		<script type="text/javascript" src="js/pay-a0bee2.bundle.js"></script>
 	
